--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="<%= webpackConfig.output.publicPath %>AAA-favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <title>AAA - Andamios y Aires acondicionados</title>
 
